--- a/package.json
+++ b/package.json
@@ -1,33 +1,53 @@
 {
   "name": "akita-react-hooks-ts",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "license": "MIT",
+  "keywords": [
+    "React",
+    "React-Router",
+    "Akita",
+    "TypeScript",
+    "RxJS",
+    "ES6",
+    "React-Boilerplate",
+    "React-Starter-Kit"
+  ],
   "dependencies": {
-    "@datorama/akita": "^3.0.4",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.11.3",
-    "@types/react": "16.8.8",
-    "@types/react-dom": "16.8.2",
+    "@datorama/akita": "^3.5.6",
+    "@types/node": "11.13.4",
+    "@types/react": "16.8.13",
+    "@types/react-dom": "16.8.4",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-to-json": "^3.3.5",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
-    "typescript": "3.3.3333"
+    "snapshot-diff": "^0.5.1",
+    "styled-components": "^4.2.0",
+    "styled-minimal": "^0.9.0",
+    "typescript": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coverage": "yarn test --coverage --logHeapUsage --no-cache",
+    "test:leak": "yarn test --detectLeaks",
     "eject": "react-scripts eject",
     "lint": "tslint -c tslint.json src/**/*.{ts,tsx} && eslint src/**/*.{js,jsx}",
     "prettier": "prettier \"**/*.{ts,tsx,scss,css,js,json,md}\" --write"
   },
   "husky": {
     "hooks": {
+      "post-merge": "node tools update",
       "pre-commit": "lint-staged",
       "pre-push": "yarn lint && yarn test"
     }
@@ -54,18 +74,24 @@
   ],
   "devDependencies": {
     "@datorama/akita-cli": "^3.0.1",
+    "@typescript-eslint/parser": "^1.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-flowtype": "^3.4.2",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
+    "eslint-plugin-flowtype": "^3.6.1",
+    "eslint-plugin-import": "^2.17.1",
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-control-statements": "^2.2.1",
-    "eslint-plugin-react-hooks": "^1.5.1",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "flow-bin": "^0.97.0",
+    "flow-typed": "^2.5.1",
+    "flow-watch": "^1.1.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4",
-    "tslint": "^5.14.0",
+    "prettier": "^1.17.0",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.15.0",
     "tslint-config-react-app": "^0.0.0",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^4.0.0"
   }
 }
