--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "test:leak": "yarn test --detectLeaks",
     "eject": "react-scripts eject",
     "lint": "tslint -c tslint.json src/**/*.{ts,tsx} && eslint src/**/*.{js,jsx}",
-    "prettier": "prettier \"**/*.{ts,tsx,scss,css,js,json,md}\" --write"
+    "prettier": "prettier \"**/*.{ts,tsx,scss,css,js,json,md}\" --write",
+    "flow": "flow",
+    "flow:watch": "flow-watch",
+    "flow:install": "flow-typed install -o"
   },
   "husky": {
     "hooks": {
@@ -82,7 +85,7 @@
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-jsx-control-statements": "^2.2.1",
     "eslint-plugin-react-hooks": "^1.6.0",
-    "flow-bin": "^0.97.0",
+    "flow-bin": "^0.98.0",
     "flow-typed": "^2.5.1",
     "flow-watch": "^1.1.4",
     "husky": "^1.3.1",
